Fix services alignment and reduce logo

--- a/src/sections/HomeServices/index.css
+++ b/src/sections/HomeServices/index.css
@@ -160,7 +160,7 @@
 
   .right-column {
     position: absolute;
-    bottom: 24%;
+    bottom: 22%;
     left: 50%;
     z-index: 1;
 
